# rdma-proj

./: CMakeLists.txt  memo.md  output.md
src/: client.c  server.c
